Add Javadoc comments across the application, integrate `maven-compiler-plugin` in `pom.xml`, and implement `DataInitializer` with example data